# ajnaapi/mercanteapi/routes.py
@@ -1,102 +1,14 @@
-from dateutil import parser
 from flask_jwt_extended import jwt_required
-from sqlalchemy.engine.result import RowProxy
-from sqlalchemy.sql import select
-from sqlalchemy.sql.expression import and_
 
-from flask import Blueprint, current_app, jsonify, request
+from flask import Blueprint, request
+
+from ajnaapi.utils import select_one_from_class, select_many_from_class, \
+    get_datamodificacao_gt, get_filtro
 from virasana.integracao.mercante.mercantealchemy import Conhecimento, \
     ConteinerVazio, Item, Manifesto, NCMItem, Escala
 
 
 mercanteapi = Blueprint('mercanteapi', __name__)
-
-
-def dump_rowproxy(rowproxy: RowProxy, exclude: list = None):
-    dump = dict([(k, v) for k, v in rowproxy.items() if not k.startswith('_')])
-    if exclude:
-        for key in exclude:
-            if dump.get(key):
-                dump.pop(key)
-    return dump
-
-
-def select_one_from_class(table, campo, valor):
-    engine = current_app.config['sql']
-    try:
-        with engine.begin() as conn:
-            s = select([table]).where(
-                campo == valor)
-            result = conn.execute(s).fetchone()
-        if result:
-            return jsonify(dump_rowproxy(result)), 200
-        else:
-            return jsonify({'msg': '%s Não encontrado' % table}), 404
-    except Exception as err:
-        current_app.logger.error(err, exc_info=True)
-        return jsonify({'msg': 'Erro inesperado: %s' % str(err)}), 400
-
-
-def select_many_from_class(table, campo, valor):
-    engine = current_app.config['sql']
-    try:
-        with engine.begin() as conn:
-            s = select([table]).where(
-                campo == valor)
-            print(campo, valor)
-            result = conn.execute(s)
-            if result:
-                resultados = [dump_rowproxy(row) for row in result]
-                if resultados and len(resultados) > 0:
-                    return jsonify(resultados), 200
-            return jsonify({'msg': '%s Não encontrado' % table.name}), 404
-    except Exception as err:
-        current_app.logger.error(err, exc_info=True)
-        return jsonify({'msg': 'Erro inesperado: %s' % str(err)}), 400
-
-
-def return_many_from_resultproxy(result):
-    resultados = None
-    if result:
-        resultados = [dump_rowproxy(row) for row in result]
-    if resultados and len(resultados) > 0:
-        print(len(resultados))
-        return jsonify(resultados), 200
-    else:
-        return jsonify({'msg': 'Não encontrado'}), 404
-
-
-def get_datamodificacao_gt(table, datamodificacao):
-    engine = current_app.config['sql']
-    try:
-        datamodificacao = parser.parse(datamodificacao)
-        print(datamodificacao)
-    except Exception as err:
-        current_app.logger.error(err, exc_info=True)
-        return jsonify({'msg': 'Erro no parâmetro: %s' % str(err)}), 400
-    try:
-        with engine.begin() as conn:
-            s = select([table]).where(
-                table.c.last_modified >= datamodificacao)
-            result = conn.execute(s)
-            return return_many_from_resultproxy(result)
-    except Exception as err:
-        current_app.logger.error(err, exc_info=True)
-        return jsonify({'msg': 'Erro inesperado: %s' % str(err)}), 400
-
-
-def get_filtro(table, uri_query):
-    engine = current_app.config['sql']
-    try:
-        with engine.begin() as conn:
-            lista_condicoes = [table.c[campo] == valor
-                               for campo, valor in uri_query.items()]
-            s = select([table]).where(and_(*lista_condicoes))
-            result = conn.execute(s)
-            return return_many_from_resultproxy(result)
-    except Exception as err:
-        current_app.logger.error(err, exc_info=True)
-        return jsonify({'msg': 'Erro inesperado: %s' % str(err)}), 400
 
 
 @mercanteapi.route('/api/conhecimentos/<numeroCEmercante>', methods=['GET'])
@@ -228,8 +140,8 @@ def Escala_list():
 
 
 @mercanteapi.route('/api/escalas/<numeroDaEscala>', methods=['GET'])
-@jwt_required
+#@jwt_required
 def Escala_manifesto(numeroDaEscala):
-    return select_many_from_class(Escala,
-                                  Escala.c.numeroDaEscala,
-                                  numeroDaEscala)
+    return select_one_from_class(Escala,
+                                 Escala.numeroDaEscala,
+                                 numeroDaEscala)
